--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "native-base": "^2.12.1",
+    "npm": "^6.9.0",
     "react": "16.8.3",
-    "react-native": "0.59.8",
+    "react-native": "^0.59.9",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
